--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.homepage-title {
+  font-size: xx-large;
+  font-weight: bold;
+}
+.homepage-subtitle {
+  font-size: x-large;
+ }
+
+
 .App {
   text-align: center;
 }
